Endring i tekststruktur på aboutUs

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -46,20 +46,13 @@
         <div id="historyContainer">
           <h3>What is important to us</h3>
 
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos
-            ea iusto distinctio quaerat ratione tenetur quo accusamus deserunt
-            ex nam alias fuga fugit vitae debitis eligendi, maxime, quasi totam,
-            voluptas tempore ab! Quod, repudiandae voluptatum. Pariatur, maiores
-            dicta! Assumenda cupiditate nihil sit atque neque nesciunt omnis
-            magni tenetur iure fuga molestias doloremque nulla dicta error odit,
-            natus iste, dolore ex? Illo corrupti sapiente, quam minima molestiae
-            doloremque nesciunt aliquam quidem veniam nobis quasi sequi sunt,
-            ducimus aspernatur praesentium vel nihil qui omnis debitis, delectus
-            nostrum a sint nemo recusandae. Laboriosam porro quas quibusdam
-            suscipit velit amet praesentium accusantium. Totam, adipisci!
-          </p>
-        </div>
+           <ul class="historyContainerList">
+             <li>Lorum Ipsum</li>
+             <li>Lorum Ipsum</li>
+             <li>Lorum Ipsum</li>
+             <li>Lorum Ipsum</li>
+           </ul>
+          </div>
 
         <div id="employeesContainer">
           <h3>Our Employees</h3>
