Posisjon og fargeendringer

--- a/products.html
+++ b/products.html
@@ -54,7 +54,7 @@
                     <a href="shoppingCart.html"><h3>Order now</h3></a>
                 </div>
                 </div>
-                    <div class="imageProductContainer"><img class="pictureProduct" src="/Style/ProductCommingSoon.jpeg" alt="Bilde"><h4>Coming soon</h4></div>
+                    <div class="imageProductContainer"><img class="pictureProduct" src="/Style/ProductCommingSoon.jpeg" alt="Bilde"><h4>More products coming soon</h4></div>
 
             </div>
     
