--- a/aboutUs.html
+++ b/aboutUs.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div class="Navbar">
-        <img class="navLogo" src="/Style/LogoUtenBakgrunn.png" alt="Logo">
+        <img class="navLogo" src="/Style/Logoutenbakgrunn2.png" alt="Logo">
         <div id="myMenu">
           <div class="myWrapper"></div>
         </div>
