--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -12,7 +12,7 @@
     <header>
 
         <div class="Navbar">
-          <img class="navLogo" src="/Style/LogoUtenBakgrunn.png" alt="Logo">
+          <img class="navLogo" src="/Style/LogoUtenBakgrunn2.png" alt="Logo">
             <div id="myMenu">
                 <div class="myWrapper">
                     
