--- a/products.html
+++ b/products.html
@@ -47,8 +47,9 @@
     
     
                 <div class="imageProductContainer">
-                    <img class="pictureProduct" src="/Style/ProductCommingSoon.jpeg" alt="Bilde">
-                    <h4>The AdjustTemp</h4> <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo architecto magni doloremque quas blanditiis cumque consequatur quod facilis expedita, voluptatem suscipit pariatur, inventore tempora dolorum dolore laborum rem itaque iure possimus? Nostrum aperiam suscipit a, assumenda minima ipsam! Doloremque officiis libero in. Consequuntur dignissimos accusantium totam sequi error enim voluptatem. Explicabo excepturi modi neque itaque vitae, quam cupiditate non vel fuga? Culpa, sunt, quae cupiditate molestias, sequi sit est officiis distinctio ullam tempora nemo velit rerum nulla qui dolores accusantium alias recusandae pariatur dignissimos tempore dolorem nihil numquam nisi inventore? Ea deleniti, aliquam quibusdam eius ratione molestias sit sunt officiis?</p>
+                    <img class="pictureProduct" src="/Style/ProductPhoto1.jpg" alt="Bilde">
+                    <h4>The AdjustTemp</h4> <p>Share a shower with other people? Tired of always having to spend time on finding your dream temperature before you can start your shower? Make life easier with The TempAdjust! Save your temperature setting and get it back in a jiffy with the handy touch screen on this smart and handy device. Save your own, your roommates’, and even your pet’s temperature. Easy to use, and saves you time and water resources!
+                    </p>
                   <h5>NOK 0000,-</h5>
                     <div class="productOrderContainer">
                     <a href="shoppingCart.html"><h3>Order now</h3></a>
