--- a/aboutUs.html
+++ b/aboutUs.html
@@ -55,10 +55,9 @@
           <h3>What is important to us</h3>
 
            <ul class="historyContainerList">
-             <li>Lorum Ipsum</li>
-             <li>Lorum Ipsum</li>
-             <li>Lorum Ipsum</li>
-             <li>Lorum Ipsum</li>
+             <li>Being Eco-friendly</li>
+             <li>Daily efficiency</li>
+             <li>Simplicity</li>
            </ul>
           </div>
 
