--- a/products.html
+++ b/products.html
@@ -26,6 +26,7 @@
       <nav class="navBar">
         <img class="navLogo" src="/Style/Logoutenbakgrunn2.png" alt="Logo" />
         <ul class="navLink">
+          <li><a href="index.html">Home</a></li>
           <li><a href="aboutus.html">About Us</a></li>
           <li><a href="products.html">Products</a></li>
           <li><a href="profile.html">Profile</a></li>
