--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -26,9 +26,7 @@
       <nav class="navBar">
         <img class="navLogo" src="/Style/Logoutenbakgrunn2.png" alt="Logo" />
         <ul class="navLink">
-          <a href="/"
-            ><img src="/Style/HomePage2.jpg" height="40" width="auto"
-          /></a>
+          <li><a href="index.html">Home</a></li>
           <li><a href="aboutus.html">About Us</a></li>
           <li><a href="products.html">Products</a></li>
           <li><a href="profile.html">Profile</a></li>
