--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div class="first">
 
-      <h1>Dusj-Kollektivet</h1>
+      <h1>Dusj Kollektivet</h1>
       <img class="forsideLogo" src="/Style/Logoutenbakgrunn2.png" alt="Logo">
           
     </div>
@@ -80,6 +80,7 @@
     </main>
   
     <div class="footer-container">
+   
 
       <div class="footer footerColumn">
         <h2>About Us</h2><div class="flexFooterColumns">
@@ -99,12 +100,21 @@
       </div>
 
       <div class="footer-email-form newsLetter footerColumn">
-        <h2>Join Our newsletter</h2>
+        <h2>Join Our Newsletter</h2>
         <div>
         <input type="email" placeholder="Enter your emailadress" id="footer-email">
         <input type="submit" value="Sign Up" id="footer-email-btn">
       </div>
+
       </div>
+    </div>
+
+      <div id = "copyright">
+        © 2021 Dusj Kollektivet - All Rights Reserved.
+      </div>
+
+
+      
 
   
   </body>
