--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -89,5 +89,8 @@
         </div>
       </div>
     </div>
+    <div id = "copyright">
+      © 2021 Dusj Kollektivet - All Rights Reserved.
+    </div>
   </body>
 </html>
