--- a/logIn.html
+++ b/logIn.html
@@ -103,5 +103,8 @@
         </div>
       </div>
     </div>
+    <div id = "copyright">
+      © 2021 Dusj Kollektivet - All Rights Reserved.
+    </div>
   </body>
 </html>
