--- a/products.html
+++ b/products.html
@@ -105,5 +105,8 @@
         </div>
       </div>
     </div>
+    <div id = "copyright">
+      © 2021 Dusj Kollektivet - All Rights Reserved.
+    </div>
   </body>
 </html>
