--- a/profile.html
+++ b/profile.html
@@ -133,5 +133,8 @@
         </div>
       </div>
     </div>
+    <div id = "copyright">
+      © 2021 Dusj Kollektivet - All Rights Reserved.
+    </div>
   </body>
 </html>
