--- a/aboutUs.html
+++ b/aboutUs.html
@@ -18,7 +18,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/Style/stylesheet2.css" />
+    <link rel="stylesheet" href="stylesheet2.css" />
     <title>About Us</title>
   </head>
 
