--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,300&family=Merriweather:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/Style/stylesheet2.css" />
+    <link rel="stylesheet" href="stylesheet2.css" />
 
   </head>
 
