--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="/Style/stylesheet2.css" />
+    <link rel="stylesheet" href="stylesheet2.css" />
   </head>
   <body>
     <header>
