--- a/products.html
+++ b/products.html
@@ -34,45 +34,46 @@
       </nav>
     </header>
 
-    <main id="productSiteContainer">
-      <div id="productContainer">
-        <div id="productContainerText">
-          <h1>Our Products</h1>
+    <main id="productPage">
+
+    <div class="productPageFlex">
+
+      <div class ="productAdjustTemp">
+        <h2>AdjustTemp</h2>
+        <p>Tired of always having to spend time on finding your dream temperature before you can start your shower? </p>
+        <p>There are many benefits of morningshower - Don't want to start the day with frustration.  </p>
+        <p> In an average home, showers are typically the third largest water use - Let's reduce this. </p>
+        <p>Let us make your life easier with The TempAdjust! Save your
+          temperature setting and get it back in a jiffy with the handy
+          touch screen on this smart and handy device. Save your oSwn, your
+          roommates’, and even your pet’s temperature. Easy to use, and
+          saves you time and water resources!</p>
+
+        <div class="adjustTempPrice">
+          <p>NOK 0000,-</p>
+            <a href="shoppingCart.html"><p>Order now</p></a>
         </div>
+
+
       </div>
 
-      <div id="ourProducts">
-        <div class="imageProductContainer">
-          <img
-            class="pictureProduct"
-            src="/Style/ProductPhoto1.jpg"
-            alt="Bilde"
-          />
-          <div id="imageProductText">
-            <h4>The AdjustTemp</h4>
-            <p>
-              Share a shower with other people? Tired of always having to spend
-              time on finding your dream temperature before you can start your
-              shower? Make life easier with The TempAdjust! Save your
-              temperature setting and get it back in a jiffy with the handy
-              touch screen on this smart and handy device. Save your own, your
-              roommates’, and even your pet’s temperature. Easy to use, and
-              saves you time and water resources!
-            </p>
-            <h5>NOK 0000,-</h5>
-            <div class="productOrderContainer">
-              <a href="shoppingCart.html"><h3>Order now</h3></a>
-            </div>
-          </div>
-        </div>
-        <div class="imageProductContainer">
-          <div id="imageProductText">
-            <h4>More solutions on the way!</h4>
-            <p>Remember to join our newsletter.</p>
-          </div>
-        </div>
+
+
+      <div class ="moreProducts">
+
       </div>
+
+
+    </div>
+
+
+
+
+
     </main>
+
+
+
 
     <div class="footer-container">
       <div class="footer footerColumn">
