--- a/products.html
+++ b/products.html
@@ -38,10 +38,11 @@
 
     <div class="productPageFlex">
 
+
       <div class ="productAdjustTemp">
         <h2>AdjustTemp</h2>
         <p>Tired of always having to spend time on finding your dream temperature before you can start your shower? </p>
-        <p>There are many benefits of morningshower - Don't want to start the day with frustration.  </p>
+        <p>There are many benefits of morningshower - Don't start the day with frustration.  </p>
         <p> In an average home, showers are typically the third largest water use - Let's reduce this. </p>
         <p>Let us make your life easier with The TempAdjust! Save your
           temperature setting and get it back in a jiffy with the handy
@@ -54,6 +55,14 @@
             <a href="shoppingCart.html"><p>Order now</p></a>
         </div>
 
+
+      </div>
+
+      <div class="productPicture">
+
+       <div> <img src="/Style/bilde1.jpg" alt="Første bilde av produktet"> </div>
+       <div> <img src="/Style/bilde2.jpg" alt="Andre bilde av produktet"> </div>
+       <div> <img src="/Style/bilde3.jpg" alt="Tredje bilde av produktet"> </div>
 
       </div>
 
