--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
   </head>
 
   <body>
-
     <header>
-
-        <nav class= "navBar">
-        <img class="navLogo" src="/Style/Logoutenbakgrunn2.png" alt="Logo">
-          <ul class ="navLink">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="aboutus.html">About Us</a></li>
-            <li><a href="products.html">Products</a></li>
-            <li><a href="profile.html">Profile</a></li>
-          </ul>
-        </nav>
+      <nav class="navBar">
+        <img class="navLogo" src="/Style/Logoutenbakgrunn2.png" alt="Logo" />
+        <ul class="navLink">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="aboutus.html">About Us</a></li>
+          <li><a href="products.html">Products</a></li>
+          <li><a href="contactUs.html">Contact Us</a></li>
+          <li><a href="profile.html">Profile</a></li>
+        </ul>
+      </nav>
+    </header>
 
     </header>
 
