--- a/aboutUs.html
+++ b/aboutUs.html
@@ -30,6 +30,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="aboutus.html">About Us</a></li>
           <li><a href="products.html">Products</a></li>
+          <li><a href="contactUs.html">Contact Us</a></li>
           <li><a href="profile.html">Profile</a></li>
         </ul>
       </nav>
