--- a/logIn.html
+++ b/logIn.html
@@ -18,8 +18,9 @@
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;1,300&family=Merriweather:ital,wght@0,300;1,300&display=swap"
       rel="stylesheet"
     />
-
+    
     <link rel="stylesheet" href="stylesheet2.css" />
+    <title> Sign in </title>
   </head>
 
   <body>
