--- a/aboutUs.html
+++ b/aboutUs.html
@@ -38,11 +38,13 @@
 
     <main id="mainContainer">
       <div id="aboutContainer">
-        <h1>Meet the team</h1>
+        <h1>Our Mission</h1>
+        <h2>Recognizing our everyday needs to beneficially rework daily undesired
+          complications, preventing conflict and unnecessary time-sinks.</h2>
         <h3>
-          Recognizing our everyday needs to beneficially rework daily undesired
-          complications, preventing conflict and unnecessary time-sinks.
+          Meet the team
         </h3>
+        <p>Hover your mouse over one of us if you would like to know more</p>
       </div>
 
       <div id="employeesContainer">
@@ -62,7 +64,10 @@
               Chief Executive Officer <br />
               theodorjaarvik@dusjkollektivet.no
             </p>
-            <p>Tekst om seg selv</p>
+            <p>Theodor is an information-technology student. He is 20 years old and stems from Stavanger, 
+              Norway. When he is not working, he likes to run, play games and draw. At DusjKollektivet, 
+              his main job has been working in innovation and product-development. 
+              He is also very fond of. hanging out with friends and play games with the boys.</p>
           </div>
         </div>
 
@@ -83,7 +88,12 @@
               karinejohannessen@dusjkollektivet.no
             </p>
 
-            <p>Tekst om seg selv</p>
+            <p>Karine has a bachelor in media and is now studying applied computer science. 
+              In her spare time, she has voulenteered with youth and nature. Now she spends her spare time on 
+              litterature and visual media. Karine has also previously worked in diffenret service- and technical 
+              support jobs.
+
+            </p>
           </div>
         </div>
 
@@ -99,7 +109,7 @@
           </div>
 
           <div class="infoContainer">
-           <p>Chief Financial Officer <br />
+           <p>Chief Technology Officer<br />
               alinasir@dusjkollektivet.no
             </p>
             <p>Ali has just completed highschool, and this is his first year in university. 
@@ -123,8 +133,9 @@
 
           <div class="infoContainer">
             <p>
-              Chief Technology Officer <br />
+              Chief Financial Officer <br/>
               hekuranismajli@dusjkollektivet.no
+              
             </p>
             <p> 
               Hekuran has a bachelor degree in Economics & Administration from University of Stavanger. After
