--- a/contactUs.html
+++ b/contactUs.html
@@ -72,6 +72,14 @@
               </div>
             </div>
 
+            <div class="findUs">
+
+              <h3>Visit us at</h3>
+              <p>Pilestredet 35, 0166 Oslo</p>
+              <img src="/Style/LogoPåDør.png" alt="Picture of a door with our logo">
+
+            </div>
+
                 </div>
               </form>
 
