--- a/logIn.html
+++ b/logIn.html
@@ -26,20 +26,28 @@
   <body>
     <header>
       <nav class="navBar">
-        <img class="navLogo" src="/Style/Logoutenbakgrunn2.png" alt="Logo" />
+        <img class="navLogo" src="/Style/NyLogo.png" alt="Logo" />
         <ul class="navLink">
           <li><a href="index.html">Home</a></li>
           <li><a href="aboutus.html">About Us</a></li>
           <li><a href="products.html">Products</a></li>
+          <li><a href="contactUs.html">Contact Us</a></li>
           <li><a href="profile.html">Profile</a></li>
         </ul>
       </nav>
     </header>
 
+
+
+
+
+
+
+
     <main>
-      <div id="registerSite">
+      <div id="logInSite">
         <form action="action_page.php">
-          <div class="container">
+          <div class="LogIncontainer">
             <h1>Sign in</h1>
             <p></p>
             <hr />
@@ -72,6 +80,12 @@
         </form>
       </div>
     </main>
+
+
+
+
+
+
 
     <div class="footer-container">
       <div class="footer footerColumn">
