--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -24,7 +24,7 @@
   <body>
     <header>
       <nav class="navBar">
-        <img class="navLogo" src="/Style/Logoutenbakgrunn2.png" alt="Logo" />
+        <img class="navLogo" src="/Style/NyLogo.png" alt="Logo" />
         <ul class="navLink">
           <li><a href="index.html">Home</a></li>
           <li><a href="aboutus.html">About Us</a></li>
@@ -35,6 +35,14 @@
       </nav>
     </header>
 
+
+
+
+
+
+
+
+
     <main>
       <div class="cartSiteContainer">
         <h1>Shopping cart</h1>
@@ -42,7 +50,7 @@
           <div class="cartProductContainer">
             <img
               class="cartProductImage"
-              src="/Style/ProductCommingSoon.jpeg"
+              src="/Style/bilde1.jpg"
               alt="Image of product"
             />
             <p>AdjustTemp (x1)</p>
@@ -58,6 +66,14 @@
         </div>
       </div>
     </main>
+
+
+
+
+
+
+
+
 
     <div class="footer-container">
       <div class="footer footerColumn">
