--- a/products.html
+++ b/products.html
@@ -23,7 +23,7 @@
     <body>
       <header>
         <nav class="navBar">
-          <img class="navLogo" src="/Style/Logoutenbakgrunn2.png" alt="Logo" />
+          <img class="navLogo" src="/Style/NyLogo.png" alt="Logo" />
           <ul class="navLink">
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutus.html">About Us</a></li>
@@ -46,7 +46,7 @@
         <p> In an average home, showers are typically the third largest water use - Let's reduce this. </p>
         <p>Let us make your life easier with The TempAdjust! Save your
           temperature setting and get it back in a jiffy with the handy
-          touch screen on this smart and handy device. Save your oSwn, your
+          touch screen on this smart and handy device. Save your own, your
           roommates’, and even your pet’s temperature. Easy to use, and
           saves you time and water resources!</p>
 
