--- a/aboutUs.html
+++ b/aboutUs.html
@@ -25,7 +25,7 @@
   <body>
     <header>
       <nav class="navBar">
-        <img class="navLogo" src="/Style/NyLogo.png" alt="Logo" />
+        <img class="navLogo" src="NyLogo.png" alt="Logo" />
         <ul class="navLink">
           <li><a href="index.html">Home</a></li>
           <li><a href="aboutus.html">About Us</a></li>
@@ -53,7 +53,7 @@
           <div class="imageContainer">
             <img
               class="profilePicture"
-              src="/Style/Employees/TJ.jpg"
+              src="TJ.jpg"
               alt="pictureOfEmployees1"
             />
             <p>Theodor Jaarvik</p>
@@ -76,7 +76,7 @@
           <div class="imageContainer">
             <img
               class="profilePicture"
-              src="/Style/Employees/KJ.jpg"
+              src="KJ.jpg"
               alt="pictureOfEmployees1"
             />
             <p>Karine Johannessen</p>
@@ -102,7 +102,7 @@
           <div class="imageContainer">
             <img
               class="profilePicture"
-              src="/Style/Employees/AN.jpg"
+              src="AN.jpg"
               alt="pictureOfEmployees1"
             />
             <p>Ali Nasir</p>
@@ -125,7 +125,7 @@
           <div class="imageContainer">
             <img
               class="profilePicture"
-              src="/Style/Employees/HI.jpg"
+              src="HI.jpg"
               alt="pictureOfEmployees1"
             />
             <p>Hekuran Ismajli</p>
@@ -172,9 +172,9 @@
         <div class="coreValuesImage">
 
 
-          <img src="/Style/sustainabilityPhoto.jpg" alt="Picuture of plants in early stage">
+          <img src="sustainabilityPhoto.jpg" alt="Picture of plants in early stage">
 
-          <img src="/Style/InnovativePhoto.jpg" alt="Photo of a hands holding a lightbulb">
+          <img src="InnovativePhoto.jpg" alt="Picture of a hands holding a lightbulb">
 
         </div>
 
