--- a/contactUs.html
+++ b/contactUs.html
@@ -24,7 +24,7 @@
     <body>
         <header>
           <nav class="navBar">
-            <img class="navLogo" src="/Style/NyLogo.png" alt="Logo" />
+            <img class="navLogo" src="NyLogo.png" alt="Logo" />
             <ul class="navLink">
               <li><a href="index.html">Home</a></li>
               <li><a href="aboutus.html">About Us</a></li>
@@ -46,7 +46,7 @@
 
             <div class="letterPicture">
               
-              <div><img src="/Style/Brev.png" alt="Bilde av et brev"></div>
+              <div><img src="Brev.png" alt="Bilde av et brev"></div>
             
             </div>
 
@@ -76,7 +76,7 @@
 
               <h3>Visit us at</h3>
               <p>Pilestredet 35, 0166 Oslo</p>
-              <img src="/Style/LogoPåDør.png" alt="Picture of a door with our logo">
+              <img src="LogoPåDør.png" alt="Picture of a door with our logo">
 
             </div>
 
