--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <body>
     <header>
       <nav class="navBar">
-        <img class="navLogo" src="/Style/NyLogo.png" alt="Logo" />
+        <img class="navLogo" src="NyLogo.png" alt="Logo" />
         <ul class="navLink">
           <li><a href="index.html">Home</a></li>
           <li><a href="aboutus.html">About Us</a></li>
@@ -38,7 +38,7 @@
     <div class="first">
 
       <h1>Dusj Kollektivet</h1>
-      <img class="forsideLogo" src="/Style/NyLogo.png" alt="Logo">
+      <img class="forsideLogo" src="NyLogo.png" alt="Logo">
           
     </div>
 
