--- a/products.html
+++ b/products.html
@@ -23,7 +23,7 @@
     <body>
       <header>
         <nav class="navBar">
-          <img class="navLogo" src="/Style/NyLogo.png" alt="Logo" />
+          <img class="navLogo" src="NyLogo.png" alt="Logo" />
           <ul class="navLink">
             <li><a href="index.html">Home</a></li>
             <li><a href="aboutus.html">About Us</a></li>
@@ -60,9 +60,9 @@
 
       <div class="productPicture">
 
-       <div> <img src="/Style/bilde1.jpg" alt="Første bilde av produktet"> </div>
-       <div> <img src="/Style/bilde2.jpg" alt="Andre bilde av produktet"> </div>
-       <div> <img src="/Style/bilde3.jpg" alt="Tredje bilde av produktet"> </div>
+       <div> <img src="bilde1.jpg" alt="Første bilde av produktet"> </div>
+       <div> <img src="bilde2.jpg" alt="Andre bilde av produktet"> </div>
+       <div> <img src="bilde3.jpg" alt="Tredje bilde av produktet"> </div>
 
       </div>
 
