--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -24,7 +24,7 @@
   <body>
     <header>
       <nav class="navBar">
-        <img class="navLogo" src="/Style/NyLogo.png" alt="Logo" />
+        <img class="navLogo" src="NyLogo.png" alt="Logo" />
         <ul class="navLink">
           <li><a href="index.html">Home</a></li>
           <li><a href="aboutus.html">About Us</a></li>
@@ -45,7 +45,7 @@
           <div class="cartProductContainer">
             <img
               class="cartProductImage"
-              src="/Style/bilde1.jpg"
+              src="bilde1.jpg"
               alt="Image of product"
             />
             <p>AdjustTemp (x1)</p>
