--- a/logIn.html
+++ b/logIn.html
@@ -26,7 +26,7 @@
   <body>
     <header>
       <nav class="navBar">
-        <img class="navLogo" src="/Style/NyLogo.png" alt="Logo" />
+        <img class="navLogo" src="NyLogo.png" alt="Logo" />
         <ul class="navLink">
           <li><a href="index.html">Home</a></li>
           <li><a href="aboutus.html">About Us</a></li>
