--- a/products.html
+++ b/products.html
@@ -44,7 +44,7 @@
         <p>Tired of always having to spend time on finding your dream temperature before you can start your shower? </p>
         <p>There are many benefits of morningshower - Don't start the day with frustration.  </p>
         <p> In an average home, showers are typically the third largest water use - Let's reduce this. </p>
-        <p>Let us make your life easier with The TempAdjust! Save your
+        <p>Let us make your life easier with The AdjustTemp! Save your
           temperature setting and get it back in a jiffy with the handy
           touch screen on this smart and handy device. Save your own, your
           roommates’, and even your pet’s temperature. Easy to use, and
